# fEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CMakeUtils/: CMakeUtils.cmake  FengCMakeUtils.cmake
Docs/: todo_list.txt
GoOpenGL/: main.cpp
OpenGL_Tutorial.xcodeproj/: project.pbxproj
OpenGL_Tutorial.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Resources/: PostEffects.txt  Resources.txt
Resources/Scenes/: EmptyScene.txt  Light.txt  MainScene.txt  Misc.txt  TerrainScene.txt
Resources/Shaders/: CubeMapShaderFS.fs  CubeMapVs.vs  DiffuseColorFS.fs  DiffuseColorVS.vs  DiffuseNormalVS.vs  DiffuseTex1SpecTex2Fs.fs  DiffuseTex1SpecTex2Vs.vs  DiffuseTextureFs.fs  DiffuseTextureInstancedVs.vs  DiffuseTextureVs.vs  FireShaderFS.fs  FireVs.vs  PostEffectBloomFinishFS.fs  PostEffectBloomStartFS.fs  PostEffectDepthOfFieldFinishFS.fs  SkyboxFs.fs  SkyboxVs.vs  SpecularCubeMapShaderFS.fs  SpecularTextureFs.fs  SpecularTextureVs.vs  TextureFs.fs  TexturesBlend3ShaderFS.fs  TexturesBlend3ShaderVS.vs  TriangleShaderFS.fs  TriangleShaderVS.vs  VertexDiffuseTextureFs.fs  VertexDiffuseTextureVs.vs  VertexSpecularTextureFs.fs  VertexSpecularTextureVs.vs
Resources/Shaders/Geometry/: PointPassThroughGs.gs  PointToHouseGs.gs  ShowNormalGs.shader  SomeGs.shader
Resources/Shaders/Lit/: DiffuseTex1SpecTex2Fs.fs  PhongParallaxFs.shader  PhongParallaxVs.shader  PhongSpecularTextureFs.fs  PhongSpecularTextureFs.shader  PhongTexFs.fs  PhongTexFs.shader  PhongTexInstancedVs.shader  PhongTexInstancedVs.vs  PhongTexVs.vs  PhongTexWithNmFs.shader  PhongTexWithNmVs.shader
Resources/Shaders/Post Effects ToDo/: PostEffectBlurFS.fs  PostEffectGrayscaleFS.fs  PostEffectVS.vs
Resources/Shaders/PostEffects/: PostEffectBlurFs.shader  PostEffectEdgeDetectionFs.shader  PostEffectGrayscaleFs.fs  PostEffectInvertColorsFs.shader  PostEffectSharpColorFs.fs  PostEffectTwoPassGausBlurFs.shader  PostEffectVs.shader
Resources/Shaders/Temp/: ModelViewProjVs.vs  TriangleTexture2Fs.fs  TriangleTexture2Vs.vs  TriangleTexture2WithTransformVs.vs  TriangleVertexColorFromPositionFs.fs  TriangleVertexColorFromPositionVs.vs  TriangleVertexColorTextureFs.fs  TriangleVertexColorTextureVs.vs  TriangleVertexColorUpsideDownVs.vs  TriangleVertexColorVs.vs  TriangleVertexColorWithOffsetVs.vs
Resources/Shaders/Todo/: DiffuseNormalFs.fs  WaterFs.fs
Resources/Shaders/Unlit/: CubemapReflectiveColorFs.fs  CubemapReflectiveColorVs.vs  CubemapRefractionColorFs.fs  CubemapRefractionColorVs.vs  UnlitFlatColorFs.fs  UnlitFlatColorFs.shader  UnlitFlatColorVs.shader  UnlitFlatColorVs.vs  UnlitTexture2MixFs.fs  UnlitTextureColorFs.fs  UnlitTextureColorVs.vs  UnlitTextureFs.shader  UnlitTextureVs.vs
Resources/Shaders/Utils/: EmptyFs.fs  OmniShadowPassFs.shader  OmniShadowPassGs.gs  OmniShadowPassVs.shader  ShadowPassGs.gs  ShadowPassVs.shader  ShadowPassVs.vs  ShowDepthFs.fs  ShowDepthVs.vs  ShowShadowMapFs.fs  ToneMappingFs.shader
Source/: FEngine.cpp  FEngine.h  main.cpp
Source/Classes/: Globals.cpp  Globals.h  StartUp.cpp  StartUp.h  TempResouces.cpp  TempResouces.h  TestSceneCreator.cpp  TestSceneCreator.hpp
Source/Classes/Scripts/: CameraController.cpp  CameraController.h  CameraStabilizer.cpp  CameraStabilizer.hpp  CameraWasdController.cpp  CameraWasdController.h  DirectionalLightMovement.cpp  DirectionalLightMovement.hpp  FeatureSwitcher.cpp  FeatureSwitcher.hpp  GameObjectRotation.cpp  GameObjectRotation.h  GameObjectSliderX.cpp  GameObjectSliderX.hpp  InstancedObjectTransformController.cpp  InstancedObjectTransformController.hpp  PostEffectSwitcher.cpp  PostEffectSwitcher.hpp  PostEffectsSwitcher.cpp  PostEffectsSwitcher.h  SceneLoader.cpp  SceneLoader.h
Source/FEngine/App/: AppSettings.cpp  AppSettings.h  Globals.h  GuidGenerator.cpp  GuidGenerator.h  Input.cpp  Input.h  Object.h  Time.cpp  Time.h
Source/FEngine/Math/: Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  MatrixUtils.cpp  MatrixUtils.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Source/FEngine/ResourcesManager/: CachedMaterial.cpp  CachedMaterial.h  CachedMesh.cpp  CachedMesh.h  CachedPostEffectDefinition.cpp  CachedPostEffectDefinition.h  CachedResource.h  CachedShader.cpp  CachedShader.h  CachedTexture.cpp  CachedTexture.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoaderNFG.cpp  MeshLoaderNFG.h  PostEffectDefinition.cpp  PostEffectDefinition.h  PostEffectSerializer.cpp  PostEffectType.h  PostEffectsSerializer.h  ResourceManager.h  ResourceManagerMaterials.cpp  ResourceManagerMaterials.h  ResourceManagerMeshes.cpp  ResourceManagerMeshes.h  ResourceManagerPostEffects.cpp  ResourceManagerPostEffects.h  ResourceManagerShaders.cpp  ResourceManagerShaders.h  ResourceManagerTextures.cpp  ResourceManagerTextures.h  ResourcesManager.cpp  ResourcesManager.h  ResourcesSerializer.cpp  ResourcesSerializer.h  Shader.cpp  Shader.h  ShaderParameters.cpp  (+7 more)
Source/FEngine/ScenesManager/: BlurPassBehaviour.cpp  BlurPassBehaviour.h  Camera.cpp  Camera.h  Component.cpp  Component.h  CompositePostEffect.cpp  CompositePostEffect.h  Entity.cpp  Entity.h  Fog.h  FollowTransform.cpp  FollowTransform.h  FrameBuffer.h  FrameBuffersPool.cpp  FrameBuffersPool.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  GameObjectScript.h  Light.cpp  Light.h  MaterialPostEffect.cpp  MaterialPostEffect.h  MeshRenderer.cpp  MeshRenderer.h  PostEffect.h  PostEffectContext.h  PostEffectPass.cpp  PostEffectPass.h  PostEffectPassBehaviour.cpp  PostEffectPassBehaviour.h  PostEffectPrePass.cpp  PostEffectPrePass.h  PostEffectRenderer.cpp  PostEffectRenderer.h  RenderPostProcessing.cpp  RenderPostProcessing.h  RenderProperties.cpp  (+15 more)
Source/FEngine/Serialization/: GameObjectComponentsRegistration.cpp  GameObjectComponentsRegistration.h  SerializableObject.h  SerializableObjectsFactory.cpp  SerializableObjectsFactory.h  SerializationNode.cpp  SerializationNode.h
Source/FEngine/Utils/: Debug.cpp  Debug.h  MaterialConstants.cpp  MaterialConstants.h  SerializableObjectParser.cpp  (+3 more)
(+169 files in other folders)
